css/style.css
/* ALL PAGES */
.hero {
  background-color: #9d1d11;
}

.section {
  background: #cc0f35;
}

.hr {
  background-color: #cc0f35;
  width: 100%;
  height: 3px;
}

.option {
  display: flex;
  justify-content: center;
}

.section-search {
  background-color: #feecf0;
  padding-top: 50px;
  padding-bottom: 50px;
}

.section-home {
  background-color: #9d1d11;
  padding-top: 50px;
  padding-bottom: 50px;
}

.results {
  display: none;
}

.section-clear {
  background-color: #9d1d11;
  padding-top: 50px;
  padding-bottom: 50px;
}

.content {
  background-color: #6d140c;
  color: white;
}

.center {
  display: flex;
  justify-content: center;
}

h1.data-region {
  font-weight: bold;
}

ul.list {
  box-shadow: none;
  background-color: #feecf0;
  list-style-type: disc;
}

.notification {
  box-shadow: 0 0 3pt 2pt black;
}

.background {
  background-color: #9d1d11;
  border-radius: 5px;
  box-shadow: 0 0 3pt 2pt black;
}

.placeholder-image {
  box-shadow: 0 0 3pt 2pt black;
}

#covid-directions {
  display: block;
  margin-left: auto;
  margin-right: auto;
  width: 50%;
  height: 50%;
  background-color: #9d1d11;
  border-radius: 5px;
  box-shadow: 0 0 3pt 2pt black;
}

.content-box {
  background-color: #feecf0;
  height: 100%;
  width: 100%;
  border: 20px solid #feecf0;
  box-shadow: 0 0 3pt 2pt black;
  border-radius: 5px;
}

.navbar-brand {
  background-color: #9d1d11;
}

.navbar-item {
  background-color: #9d1d11;
}

.navbar-item:hover {
  background-color: #9d1d11;
}

.navbar-text {
  color: white;
}

.navbar-item:hover > .navbar-text {
  color: #9d1d11;
}

.navbar-menu {
  background-color: #9d1d11;
}

/* CHART */
/* TODO: RULE IS A BIT OF A HACK TO FORCE THE RED BACKGROUND TO THE BOTTOM OF THE PAGE, IS THERE A MORE ELEGANT SOLUTION? */
#chart,
#stats{
  min-height: 50vh;
}

#chart{
  width: 100%;
}

@media only screen and (max-width: 600px) {
  #chart {
    height: 100vh;
  }
}

#map,
#frontPageStat,
#resultPageStat,
#frontPageChart,
#resultsChart{
  display: flex;
  align-items: center;
  min-height: 50vh;
}

.indexChart,
.indexMap,
.indexStats{
  max-width: 100%;
  display: flex;
  align-items: center;
  min-height: 50vh;
}

.highcharts-figure{
  min-width: 95%;
  margin: 1em auto;
}
.highcharts-data-table table {
  min-width: 360px;
  max-width: 800px;
  margin: 1em auto;
}

.highcharts-data-table table {
  font-family: Verdana, sans-serif;
  border-collapse: collapse;
  border: 1px solid #ebebeb;
  margin: 10px auto;
  text-align: center;
  width: 100%;
  max-width: 500px;
}
.highcharts-data-table caption {
  padding: 1em 0;
  font-size: 1.2em;
  color: #555;
}
.highcharts-data-table th {
  font-weight: 600;
  padding: 0.5em;
}
.highcharts-data-table td,
.highcharts-data-table th,
.highcharts-data-table caption {
  padding: 0.5em;
}
.highcharts-data-table thead tr,
.highcharts-data-table tr:nth-child(even) {
  background: #f8f8f8;
}
.highcharts-data-table tr:hover {
  background: #f1f7ff;
}

/* LOADING SPINNER */
/* https://github.com/DanielHearn/css-loaders */
.loaderContainer{
  align-items: center;
  display: flex;
  height: 100%;
  justify-content: center;
  margin: 0;
  text-align: center;
  width: 100%;
  /* border: 2px dotted red; */
}

.loading {
  animation: loaderAnim 1.25s infinite;
  height: 50px;
  outline: 1px solid transparent;
  width: 50px;
}

.loading #largeBox {
  background-color: #9d1d11;
  height: 3em;
  outline: 1px solid transparent;
  position: fixed;
  width: 3em;
}

.loading #smallBox {
  animation: smallBoxAnim 1.25s alternate infinite ease-in-out;
  background-color: #feecf0;
  height: 3em;
  outline: 1px solid transparent;
  position: fixed;
  width: 3em;
  z-index: 1;
}

@keyframes smallBoxAnim {
  0% {
    transform: scale(0.2);
  }
  100% {
    transform: scale(0.75);
  }
}

@keyframes loaderAnim {
  0% {
    transform-origin: center;
    transform:  rotate(0deg);
  }
  100% {
    transform-origin: center;
    transform: rotate(90deg);
  }
}

